Actualización de archivos

--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ristorante Italiano</title>
+    <title>Cooperativa K&E</title>
     <script src="https://kit.fontawesome.com/283335a286.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,14 +20,14 @@
         <div class="contenedor-navegacion">
             <div class="contenido-navegacion contenedor">
                 <div class="logo">
-                    <h2>Ristorante <span class="verde">Tu</span><span>ri</span><span class="rojo">lli</span></h2>
+                    <h2>Cooperativa <span class="celeste">K</span><span>&</span><span class="celeste">E</span></h2>
                 </div>
                 <nav class="navegacion ocultar">
                     <a href="#">Inicio</a>
                     <a href="#">Sobre Nosotros</a>
-                    <a href="#">Menú</a>
-                    <a href="#">Chef</a>
-                    <a href="#">Contacto</a>
+                    <a href="#">Servicios</a>
+                    <a href="#">Actividades</a>
+                    <a href="#">Contactenos</a>
                 </nav>
                 <div class="hamburguesa">
                     <span></span><span></span><span></span>
@@ -50,7 +50,7 @@
     <div class="contenedor-nosotros contenedor">
         <div class="texto-nosotros">
             <p class="bienvenida">Bienvenido a!</p>
-            <h1>Ristorante Turilli</h1>
+            <h1>Cooperativa K&E</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, fugiat delectus porro suscipit
                 architecto ab impedit accusantium quod voluptate quaerat odio sunt quisquam odit, sapiente aut esse
                 possimus nulla totam!
