--- a/web/index.html
+++ b/web/index.html
@@ -37,8 +37,8 @@
         <div class="contenido-header">
             <div class="contenedor-encabezado">
                 <div class="texto-encabezado">
-                    <h2>Accoglienza!</h2>
-                    <a href="#" class="btn bordes">Il nostro menú</a>
+                    <h2>COOPERATIVA K&E</h2>
+                    <a href="#" class="btn bordes">Tu mejor opción</a>
                 </div>
                 <video autoplay loop muted>
                     <source src="/assets/bg_video.mp4">
@@ -51,12 +51,10 @@
         <div class="texto-nosotros">
             <p class="bienvenida">Bienvenido a!</p>
             <h1>Cooperativa K&E</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, fugiat delectus porro suscipit
-                architecto ab impedit accusantium quod voluptate quaerat odio sunt quisquam odit, sapiente aut esse
-                possimus nulla totam!
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate eveniet placeat nesciunt harum
-                similique ab, illo debitis ullam ipsa labore quidem vitae sunt et quasi veritatis? Excepturi ex non
-                cumque.
+            <p> Somos una organización sin fines de lucro,
+                nuestro principal objetivo es brindar la ayuda necesaria a
+                nuestros socios y a sus familias contribuyendo así al progreso 
+                económico y social de nuestra comunidad.
             </p>
             <a href="#" class="btn btn-rojo">Contactar</a>
         </div>
@@ -72,147 +70,84 @@
     </div>
 
     <section class="menu contenedor">
-        <h2 class="texto-platillos">Platillos populares</h2>
+        <h2 class="texto-platillos">CONOCE TUS BENEFICIOS COMO SOCIO</h2>
         <div class="botones-platillos">
-            <button class="todos btn btn-verde">Todos</button>
-            <button class="ensaladas btn btn-verde">Ensaladas</button>
-            <button class="pasta btn btn-verde">Pasta</button>
-            <button class="pizza btn btn-verde">Pizza</button>
-            <button class="postres btn btn-verde">Postres</button>
+            <button class="todos btn btn-verde">Club Coop</button>
+            <button class="ensaladas btn btn-verde">Afiliate</button>
+            <button class="pasta btn btn-verde">Pide Tu Préstamo AQUÍ!</button>
+            <button class="pizza btn btn-verde">Trabaja con Nosotros</button>
+            <button class="postres btn btn-verde">Preguntas Frecuentes</button>
         </div>
         <div class="platillos">
             <div class="platillo" data-platillo="ensalada">
                 <img data-src="assets/img/ensalada.webp" alt="ensalada">
-                <h2>Quinoa</h2>
-                <p>Quinoa, cerezas, tomate, aceitunas, cereal.</p>
+                <h2>Club Coop</h2>
+                <p>¡Llego el verano! Por eso no dejes pasar esta oportunidad y disfruta de los mejores clubes recreacionales que tenemos para ti</p>
                 <div class="precio">
-                    <p>$40.0</p>
-                    <button><i class="fas fa-shopping-basket"></i></button>
+                    <a href="#" class="btn btn-verde">Ingresa Aquí</a>
                 </div>
             </div>
             <div class="platillo" data-platillo="ensalada">
                 <img data-src="assets/img/ensalada2.webp" alt="ensalada">
-                <h2>Quinoa</h2>
-                <p>Quinoa, cerezas, tomate, aceitunas, cereal.</p>
+                <h2>Afiliate</h2>
+                <p>Aún No eres Socio de la Cooperativa ¿Qué esperas? Estás a un Clic de Afiliarte… y recibir tu préstamo para lo que necesites</p>
                 <div class="precio">
-                    <p>$40.0</p>
-                    <button><i class="fas fa-shopping-basket"></i></button>
+                    <a href="#" class="btn btn-verde">Ingresa Aquí</a>
                 </div>
             </div>
             <div class="platillo" data-platillo="ensalada">
                 <img data-src="assets/img/ensalada2.webp" alt="ensalada">
-                <h2>Quinoa</h2>
-                <p>Quinoa, cerezas, tomate, aceitunas, cereal.</p>
+                <h2>Pide Tu Préstamo AQUÍ!</h2>
+                <p>¡Pide tu super préstamo Ya! Obtén hasta S/50,000, con la mejor tasa del mercado</p>
                 <div class="precio">
-                    <p>$40.0</p>
-                    <button><i class="fas fa-shopping-basket"></i></button>
+                    <a href="#" class="btn btn-verde">Ingresa Aquí</a>
                 </div>
             </div>
             <div class="platillo" data-platillo="pasta">
                 <img data-src="assets/img/pasta1.webp" alt="pasta">
-                <h2>Quinoa</h2>
-                <p>Quinoa, cerezas, tomate, aceitunas, cereal.</p>
+                <h2>Trabaja con Nosotros</h2>
+                <p>¿Quieres ser parte del Equipo Tumi? Esta es tu oportunidad de demostrar todo tu potencial.</p>
                 <div class="precio">
-                    <p>$40.0</p>
-                    <button><i class="fas fa-shopping-basket"></i></button>
+                    <a href="#" class="btn btn-verde">Ingresa Aquí</a>
                 </div>
             </div>
             <div class="platillo" data-platillo="pasta">
                 <img data-src="assets/img/pasta2.webp" alt="pasta">
-                <h2>Quinoa</h2>
-                <p>Quinoa, cerezas, tomate, aceitunas, cereal.</p>
+                <h2>Preguntas Frecuentes</h2>
+                <p>Todo lo que querías saber sobre los productos, servicios y beneficios de tu Cooperativa K & E… lo podrás encontrar aquí</p>
                 <div class="precio">
-                    <p>$40.0</p>
-                    <button><i class="fas fa-shopping-basket"></i></button>
+                   <a href="#" class="btn btn-verde">Ingresa Aquí</a>
                 </div>
             </div>
-            <div class="platillo" data-platillo="pasta">
-                <img data-src="assets/img/pasta2.webp" alt="pasta">
-                <h2>Quinoa</h2>
-                <p>Quinoa, cerezas, tomate, aceitunas, cereal.</p>
+            <div class="platillo" data-platillo="ensalada">
+                <img data-src="assets/img/ensalada2.webp" alt="ensalada">
+                <h2>Alianzas Comerciales</h2>
+                <p>Encuentra los increíbles descuentos comerciales que tenemos para ti con las mejores marcas aliadas del mercado peruano.</p>
                 <div class="precio">
-                    <p>$40.0</p>
-                    <button><i class="fas fa-shopping-basket"></i></button>
+                    <a href="#" class="btn btn-verde">Ingresa Aquí</a>
                 </div>
             </div>
-            <div class="platillo" data-platillo="pizza">
-                <img data-src="assets/img/pizza1.webp" alt="pizza">
-                <h2>Quinoa</h2>
-                <p>Quinoa, cerezas, tomate, aceitunas, cereal.</p>
-                <div class="precio">
-                    <p>$40.0</p>
-                    <button><i class="fas fa-shopping-basket"></i></button>
-                </div>
-            </div>
-            <div class="platillo" data-platillo="pizza">
-                <img data-src="assets/img/pizza2.webp" alt="pizza">
-                <h2>Quinoa</h2>
-                <p>Quinoa, cerezas, tomate, aceitunas, cereal.</p>
-                <div class="precio">
-                    <p>$40.0</p>
-                    <button><i class="fas fa-shopping-basket"></i></button>
-                </div>
-            </div>
-            <div class="platillo" data-platillo="pizza">
-                <img data-src="assets/img/pizza2.webp" alt="pizza">
-                <h2>Quinoa</h2>
-                <p>Quinoa, cerezas, tomate, aceitunas, cereal.</p>
-                <div class="precio">
-                    <p>$40.0</p>
-                    <button><i class="fas fa-shopping-basket"></i></button>
-                </div>
-            </div>
-            <div class="platillo" data-platillo="postre">
-                <img data-src="assets/img/postres1.webp" alt="postre">
-                <h2>Quinoa</h2>
-                <p>Quinoa, cerezas, tomate, aceitunas, cereal.</p>
-                <div class="precio">
-                    <p>$40.0</p>
-                    <button><i class="fas fa-shopping-basket"></i></button>
-                </div>
-            </div>
-            <div class="platillo" data-platillo="postre">
-                <img data-src="assets/img/postres2.webp" alt="postre">
-                <h2>Quinoa</h2>
-                <p>Quinoa, cerezas, tomate, aceitunas, cereal.</p>
-                <div class="precio">
-                    <p>$40.0</p>
-                    <button><i class="fas fa-shopping-basket"></i></button>
-                </div>
-            </div>
-            <div class="platillo" data-platillo="postre">
-                <img data-src="assets/img/postres2.webp" alt="postre">
-                <h2>Quinoa</h2>
-                <p>Quinoa, cerezas, tomate, aceitunas, cereal.</p>
-                <div class="precio">
-                    <p>$40.0</p>
-                    <button><i class="fas fa-shopping-basket"></i></button>
-                </div>
-            </div>
-        </div>
     </section>
 
     <div class="separador">
         <div class="contenido-separador contenedor">
-            <h2>Comida italiana para empezar el día</h2>
-            <p>Empieza tu día comiedo deliciosa comida o un café italiano</p>
-            <a href="#" class="btn btn-verde">Ordenar ahora</a>
+            <h2>¿AÚN NO ERES SOCIO DE LA COOPERATIVA?</h2>
+            <p>¿Qué esperas?… si trabajas en algunas de las siguientes instituciones, ya puedes ser parte de la familia Cooperativa K&E</p>
+            <a href="#" class="btn btn-verde">Unete con nosotros</a>
         </div>
     </div>
 
     <section class="chef contenedor">
-        <h2>Chef ejecutivo</h2>
+        <h2>Reseña histórica</h2>
         <div class="contenido-chef">
             <div class="texto-chef">
-                <h3>La exelencia está en la diversidad y el modo de progresar
-                    es conocer y comparar las diversidades de productos, culturas y
-                    técnicas
+                <h3>En la actualidad nuestra organización ha crecido significativamente, 
+                    contando con un universo de más de 70 mil socios a nivel nacional, 
+                    estando presente en todos los departamentos de nuestro territorio patrio y ofreciendo los mejores productos, 
+                    servicios y beneficios con la calidez y calidad de servicio que nos caracteriza como familia K&E.
                 </h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus corporis dolores eveniet
-                    vitae,
-                    natus tempora recusandae hic laborum error ducimus repellat, laudantium temporibus tenetur totam
-                    sint
-                    consequuntur eligendi! Asperiores, ad.</p>
+                <p>Bienvenidos a la web de la Cooperativa K&E, donde ofrecemos la información actualizada 
+                    acerca de nuestros servicios y beneficios que siempre están a tu disposición..</p>
                 <a href="#" class="btn btn-verde">Leer Bíografia</a>
             </div>
             <div class="imagen-chef">
@@ -225,9 +160,9 @@
 
         <div class="informacion-contacto">
             <h3>Contactanos</h3>
-            <p><i class="fas fa-map-marker-alt"></i>23. Roma Italia 75012</p>
-            <p><i class="fas fa-envelope"></i> luca@turilli.it</p>
-            <p><i class="fas fa-phone-alt"></i>+31123410921</p>
+            <p><i class="fas fa-map-marker-alt"></i>Av.Angamos Oeste N° 836</p>
+            <p><i class="fas fa-envelope"></i> Cooperativakye@coop.com</p>
+            <p><i class="fas fa-phone-alt"></i>929423323</p>
             <div class="redes-sociales">
                 <i class="fab fa-facebook-square"></i>
                 <i class="fab fa-twitter-square"></i>
@@ -266,12 +201,12 @@
         <div class="contenedor-piepagina contenedor">
             <div class="info">
                 <h3>Dirección</h3>
-                <p>23.Roma Italia 75012</p>
+                <p>Av.Angamos Oeste N° 836</p>
             </div>
             <div class="info">
                 <h3>Días especiales</h3>
                 <p>Sabados y Jueves 7am - 11pm</p>
-                <p>+3123410921</p>
+                <p>929423323</p>
             </div>
             <div class="info">
                 <h3>Horarios</h3>
@@ -291,7 +226,7 @@
         </div>
     </div>
     <footer class="footer">
-        <p>Todos los derechos reservados &copy; 2021 Risotrante Turilli, desarrollado por Azael</p>
+        <p>Todos los derechos reservados &copy; 2025 Cooperativa K&E, desarrollado por kairo</p>
     </footer>
     <script src="js/app.js"></script>
 
