--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,7 @@
         <div class="contenedor-navegacion">
             <div class="contenido-navegacion contenedor">
                 <div class="logo">
-                    <h2>Cooperativa <span class="celeste">K</span><span>&</span><span class="celeste">E</span></h2>
+                    <h2>Cooperativa <span class="rojo">K</span><span>&</span><span class="verde">E</span></h2>
                 </div>
                 <nav class="navegacion ocultar">
                     <a href="#">Inicio</a>
@@ -41,7 +41,7 @@
                     <a href="#" class="btn bordes">Tu mejor opción</a>
                 </div>
                 <video autoplay loop muted>
-                    <source src="/assets/bg_video.mp4">
+                    <source src="C:\xampp\htdocs\cooperativakye/bg_video.mp4">
                 </video>
             </div>
         </div>
@@ -77,6 +77,7 @@
             <button class="pasta btn btn-verde">Pide Tu Préstamo AQUÍ!</button>
             <button class="pizza btn btn-verde">Trabaja con Nosotros</button>
             <button class="postres btn btn-verde">Preguntas Frecuentes</button>
+            <button class="postres btn btn-verde">Alianzas Comerciales</button>
         </div>
         <div class="platillos">
             <div class="platillo" data-platillo="ensalada">
@@ -151,7 +152,7 @@
                 <a href="#" class="btn btn-verde">Leer Bíografia</a>
             </div>
             <div class="imagen-chef">
-                <img data-src="/assets/img/chef.webp" alt="fotografia del chef">
+                <img data-src="C:\xampp\htdocs\cooperativakye\ahorro.jpg" alt="fotografia de adultos">
             </div>
         </div>
     </section>
