--- a/web/index.html
+++ b/web/index.html
@@ -41,7 +41,7 @@
                     <a href="#" class="btn bordes">Tu mejor opción</a>
                 </div>
                 <video autoplay loop muted>
-                    <source src="C:\xampp\htdocs\cooperativakye/bg_video.mp4">
+                    <source src="assets/img/bg_video.mp4">
                 </video>
             </div>
         </div>
@@ -152,7 +152,7 @@
                 <a href="#" class="btn btn-verde">Leer Bíografia</a>
             </div>
             <div class="imagen-chef">
-                <img data-src="C:\xampp\htdocs\cooperativakye\ahorro.jpg" alt="fotografia de adultos">
+                <img data-src="assets/img/ahorro.jpg" alt="fotografia de adultos">
             </div>
         </div>
     </section>
